parser.output
Terminals which are not used

   TDOT


Grammar

    0 $accept: start $end

    1 start: INT TIDENTIFIER TLPAREN TRPAREN comp_stmt

    2 comp_stmt: TLBRACE stmts TRBRACE
    3          | TSEMICOLON

    4 stmts: stmt stmts
    5      | /* empty */

    6 stmt: matched_stmt
    7     | open_stmt

    8 matched_stmt: IF TLPAREN expr TRPAREN matched_stmt ELSE matched_stmt
    9             | expr_and_decl TSEMICOLON
   10             | comp_stmt
   11             | TREAD TLPAREN identifier TRPAREN TSEMICOLON
   12             | TWRITE TLPAREN expr TRPAREN TSEMICOLON
   13             | WHILE TLPAREN expr_and_decl TRPAREN matched_stmt
   14             | FOR TLPAREN optional_expr TSEMICOLON optional_expr TSEMICOLON optional_expr TRPAREN matched_stmt
   15             | TRETURN expr TSEMICOLON

   16 open_stmt: IF TLPAREN expr TRPAREN stmt
   17          | IF TLPAREN expr TRPAREN matched_stmt ELSE open_stmt

   18 expr_and_decl: expr
   19              | type args_list

   20 type: INT
   21     | CHAR
   22     | FLOAT
   23     | DOUBLE

   24 args_list: arg
   25          | arg TCOMMA args_list

   26 arg: identifier TEQUAL expr
   27    | identifier

   28 expr: expr1 TEQUAL expr
   29     | expr12

   30 optional_expr: expr_and_decl
   31              | /* empty */

   32 expr12: expr11 TOR expr12
   33       | expr11

   34 expr11: expr10 TAND expr11
   35       | expr10

   36 expr10: expr9 TBOR expr10
   37       | expr9

   38 expr9: expr8 TBXOR expr9
   39      | expr8

   40 expr8: expr7 TBAND expr8
   41      | expr7

   42 expr7: expr6 TCEQ expr7
   43      | expr6 TCNE expr7
   44      | expr6

   45 expr6: expr5 TCLT expr6
   46      | expr5 TCGT expr6
   47      | expr5 TCLE expr6
   48      | expr5 TCGE expr6
   49      | expr5

   50 expr5: expr4 TBLEFT expr5
   51      | expr4 TBRIGHT expr5
   52      | expr4

   53 expr4: expr4 TPLUS expr3
   54      | expr4 TMINUS expr3
   55      | expr3

   56 expr3: expr2 TMUL expr3
   57      | expr2 TDIV expr3
   58      | expr2 TMOD expr3
   59      | expr2

   60 expr2: TMINUS TINTEGER
   61      | TPLUS TINTEGER
   62      | TSADD identifier
   63      | TSMINUS identifier
   64      | identifier TSADD
   65      | identifier TSMINUS
   66      | TNOT expr1
   67      | TBNOT expr1
   68      | expr1

   69 expr1: TLPAREN expr TRPAREN
   70      | expr0

   71 expr0: identifier
   72      | TINTEGER
   73      | TDOUBLE
   74      | TCHAR

   75 identifier: TIDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 1 20
CHAR (259) 21
FLOAT (260) 22
DOUBLE (261) 23
IF (262) 8 16 17
ELSE (263) 8 17
WHILE (264) 13
FOR (265) 14
TIDENTIFIER (266) 1 75
TINTEGER (267) 60 61 72
TDOUBLE (268) 73
TCHAR (269) 74
TCEQ (270) 42
TCNE (271) 43
TCLT (272) 45
TCLE (273) 47
TCGT (274) 46
TCGE (275) 48
TEQUAL (276) 26 28
TLPAREN (277) 1 8 11 12 13 14 16 17 69
TRPAREN (278) 1 8 11 12 13 14 16 17 69
TLBRACE (279) 2
TRBRACE (280) 2
TCOMMA (281) 25
TDOT (282)
TSEMICOLON (283) 3 9 11 12 14 15
TPLUS (284) 53 61
TMINUS (285) 54 60
TMUL (286) 56
TDIV (287) 57
TMOD (288) 58
TSADD (289) 62 64
TSMINUS (290) 63 65
TREAD (291) 11
TWRITE (292) 12
TNOT (293) 66
TAND (294) 34
TOR (295) 32
TBNOT (296) 67
TBAND (297) 40
TBOR (298) 36
TBXOR (299) 38
TBLEFT (300) 50
TBRIGHT (301) 51
TRETURN (302) 15


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
start (49)
    on left: 1, on right: 0
comp_stmt (50)
    on left: 2 3, on right: 1 10
stmts (51)
    on left: 4 5, on right: 2 4
stmt (52)
    on left: 6 7, on right: 4 16
matched_stmt (53)
    on left: 8 9 10 11 12 13 14 15, on right: 6 8 13 14 17
open_stmt (54)
    on left: 16 17, on right: 7 17
expr_and_decl (55)
    on left: 18 19, on right: 9 13 30
type (56)
    on left: 20 21 22 23, on right: 19
args_list (57)
    on left: 24 25, on right: 19 25
arg (58)
    on left: 26 27, on right: 24 25
expr (59)
    on left: 28 29, on right: 8 12 15 16 17 18 26 28 69
optional_expr (60)
    on left: 30 31, on right: 14
expr12 (61)
    on left: 32 33, on right: 29 32
expr11 (62)
    on left: 34 35, on right: 32 33 34
expr10 (63)
    on left: 36 37, on right: 34 35 36
expr9 (64)
    on left: 38 39, on right: 36 37 38
expr8 (65)
    on left: 40 41, on right: 38 39 40
expr7 (66)
    on left: 42 43 44, on right: 40 41 42 43
expr6 (67)
    on left: 45 46 47 48 49, on right: 42 43 44 45 46 47 48
expr5 (68)
    on left: 50 51 52, on right: 45 46 47 48 49 50 51
expr4 (69)
    on left: 53 54 55, on right: 50 51 52 53 54
expr3 (70)
    on left: 56 57 58 59, on right: 53 54 55 56 57 58
expr2 (71)
    on left: 60 61 62 63 64 65 66 67 68, on right: 56 57 58 59
expr1 (72)
    on left: 69 70, on right: 28 66 67 68
expr0 (73)
    on left: 71 72 73 74, on right: 70
identifier (74)
    on left: 75, on right: 11 26 27 62 63 64 65 71


state 0

    0 $accept: . start $end

    INT  shift, and go to state 1

    start  go to state 2


state 1

    1 start: INT . TIDENTIFIER TLPAREN TRPAREN comp_stmt

    TIDENTIFIER  shift, and go to state 3


state 2

    0 $accept: start . $end

    $end  shift, and go to state 4


state 3

    1 start: INT TIDENTIFIER . TLPAREN TRPAREN comp_stmt

    TLPAREN  shift, and go to state 5


state 4

    0 $accept: start $end .

    $default  accept


state 5

    1 start: INT TIDENTIFIER TLPAREN . TRPAREN comp_stmt

    TRPAREN  shift, and go to state 6


state 6

    1 start: INT TIDENTIFIER TLPAREN TRPAREN . comp_stmt

    TLBRACE     shift, and go to state 7
    TSEMICOLON  shift, and go to state 8

    comp_stmt  go to state 9


state 7

    2 comp_stmt: TLBRACE . stmts TRBRACE

    INT          shift, and go to state 10
    CHAR         shift, and go to state 11
    FLOAT        shift, and go to state 12
    DOUBLE       shift, and go to state 13
    IF           shift, and go to state 14
    WHILE        shift, and go to state 15
    FOR          shift, and go to state 16
    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TLBRACE      shift, and go to state 7
    TSEMICOLON   shift, and go to state 8
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TREAD        shift, and go to state 26
    TWRITE       shift, and go to state 27
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29
    TRETURN      shift, and go to state 30

    $default  reduce using rule 5 (stmts)

    comp_stmt      go to state 31
    stmts          go to state 32
    stmt           go to state 33
    matched_stmt   go to state 34
    open_stmt      go to state 35
    expr_and_decl  go to state 36
    type           go to state 37
    expr           go to state 38
    expr12         go to state 39
    expr11         go to state 40
    expr10         go to state 41
    expr9          go to state 42
    expr8          go to state 43
    expr7          go to state 44
    expr6          go to state 45
    expr5          go to state 46
    expr4          go to state 47
    expr3          go to state 48
    expr2          go to state 49
    expr1          go to state 50
    expr0          go to state 51
    identifier     go to state 52


state 8

    3 comp_stmt: TSEMICOLON .

    $default  reduce using rule 3 (comp_stmt)


state 9

    1 start: INT TIDENTIFIER TLPAREN TRPAREN comp_stmt .

    $default  reduce using rule 1 (start)


state 10

   20 type: INT .

    $default  reduce using rule 20 (type)


state 11

   21 type: CHAR .

    $default  reduce using rule 21 (type)


state 12

   22 type: FLOAT .

    $default  reduce using rule 22 (type)


state 13

   23 type: DOUBLE .

    $default  reduce using rule 23 (type)


state 14

    8 matched_stmt: IF . TLPAREN expr TRPAREN matched_stmt ELSE matched_stmt
   16 open_stmt: IF . TLPAREN expr TRPAREN stmt
   17          | IF . TLPAREN expr TRPAREN matched_stmt ELSE open_stmt

    TLPAREN  shift, and go to state 53


state 15

   13 matched_stmt: WHILE . TLPAREN expr_and_decl TRPAREN matched_stmt

    TLPAREN  shift, and go to state 54


state 16

   14 matched_stmt: FOR . TLPAREN optional_expr TSEMICOLON optional_expr TSEMICOLON optional_expr TRPAREN matched_stmt

    TLPAREN  shift, and go to state 55


state 17

   75 identifier: TIDENTIFIER .

    $default  reduce using rule 75 (identifier)


state 18

   72 expr0: TINTEGER .

    $default  reduce using rule 72 (expr0)


state 19

   73 expr0: TDOUBLE .

    $default  reduce using rule 73 (expr0)


state 20

   74 expr0: TCHAR .

    $default  reduce using rule 74 (expr0)


state 21

   69 expr1: TLPAREN . expr TRPAREN

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29

    expr        go to state 56
    expr12      go to state 39
    expr11      go to state 40
    expr10      go to state 41
    expr9       go to state 42
    expr8       go to state 43
    expr7       go to state 44
    expr6       go to state 45
    expr5       go to state 46
    expr4       go to state 47
    expr3       go to state 48
    expr2       go to state 49
    expr1       go to state 50
    expr0       go to state 51
    identifier  go to state 52


state 22

   61 expr2: TPLUS . TINTEGER

    TINTEGER  shift, and go to state 57


state 23

   60 expr2: TMINUS . TINTEGER

    TINTEGER  shift, and go to state 58


state 24

   62 expr2: TSADD . identifier

    TIDENTIFIER  shift, and go to state 17

    identifier  go to state 59


state 25

   63 expr2: TSMINUS . identifier

    TIDENTIFIER  shift, and go to state 17

    identifier  go to state 60


state 26

   11 matched_stmt: TREAD . TLPAREN identifier TRPAREN TSEMICOLON

    TLPAREN  shift, and go to state 61


state 27

   12 matched_stmt: TWRITE . TLPAREN expr TRPAREN TSEMICOLON

    TLPAREN  shift, and go to state 62


state 28

   66 expr2: TNOT . expr1

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21

    expr1       go to state 63
    expr0       go to state 51
    identifier  go to state 64


state 29

   67 expr2: TBNOT . expr1

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21

    expr1       go to state 65
    expr0       go to state 51
    identifier  go to state 64


state 30

   15 matched_stmt: TRETURN . expr TSEMICOLON

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29

    expr        go to state 66
    expr12      go to state 39
    expr11      go to state 40
    expr10      go to state 41
    expr9       go to state 42
    expr8       go to state 43
    expr7       go to state 44
    expr6       go to state 45
    expr5       go to state 46
    expr4       go to state 47
    expr3       go to state 48
    expr2       go to state 49
    expr1       go to state 50
    expr0       go to state 51
    identifier  go to state 52


state 31

   10 matched_stmt: comp_stmt .

    $default  reduce using rule 10 (matched_stmt)


state 32

    2 comp_stmt: TLBRACE stmts . TRBRACE

    TRBRACE  shift, and go to state 67


state 33

    4 stmts: stmt . stmts

    INT          shift, and go to state 10
    CHAR         shift, and go to state 11
    FLOAT        shift, and go to state 12
    DOUBLE       shift, and go to state 13
    IF           shift, and go to state 14
    WHILE        shift, and go to state 15
    FOR          shift, and go to state 16
    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TLBRACE      shift, and go to state 7
    TSEMICOLON   shift, and go to state 8
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TREAD        shift, and go to state 26
    TWRITE       shift, and go to state 27
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29
    TRETURN      shift, and go to state 30

    $default  reduce using rule 5 (stmts)

    comp_stmt      go to state 31
    stmts          go to state 68
    stmt           go to state 33
    matched_stmt   go to state 34
    open_stmt      go to state 35
    expr_and_decl  go to state 36
    type           go to state 37
    expr           go to state 38
    expr12         go to state 39
    expr11         go to state 40
    expr10         go to state 41
    expr9          go to state 42
    expr8          go to state 43
    expr7          go to state 44
    expr6          go to state 45
    expr5          go to state 46
    expr4          go to state 47
    expr3          go to state 48
    expr2          go to state 49
    expr1          go to state 50
    expr0          go to state 51
    identifier     go to state 52


state 34

    6 stmt: matched_stmt .

    $default  reduce using rule 6 (stmt)


state 35

    7 stmt: open_stmt .

    $default  reduce using rule 7 (stmt)


state 36

    9 matched_stmt: expr_and_decl . TSEMICOLON

    TSEMICOLON  shift, and go to state 69


state 37

   19 expr_and_decl: type . args_list

    TIDENTIFIER  shift, and go to state 17

    args_list   go to state 70
    arg         go to state 71
    identifier  go to state 72


state 38

   18 expr_and_decl: expr .

    $default  reduce using rule 18 (expr_and_decl)


state 39

   29 expr: expr12 .

    $default  reduce using rule 29 (expr)


state 40

   32 expr12: expr11 . TOR expr12
   33       | expr11 .

    TOR  shift, and go to state 73

    $default  reduce using rule 33 (expr12)


state 41

   34 expr11: expr10 . TAND expr11
   35       | expr10 .

    TAND  shift, and go to state 74

    $default  reduce using rule 35 (expr11)


state 42

   36 expr10: expr9 . TBOR expr10
   37       | expr9 .

    TBOR  shift, and go to state 75

    $default  reduce using rule 37 (expr10)


state 43

   38 expr9: expr8 . TBXOR expr9
   39      | expr8 .

    TBXOR  shift, and go to state 76

    $default  reduce using rule 39 (expr9)


state 44

   40 expr8: expr7 . TBAND expr8
   41      | expr7 .

    TBAND  shift, and go to state 77

    $default  reduce using rule 41 (expr8)


state 45

   42 expr7: expr6 . TCEQ expr7
   43      | expr6 . TCNE expr7
   44      | expr6 .

    TCEQ  shift, and go to state 78
    TCNE  shift, and go to state 79

    $default  reduce using rule 44 (expr7)


state 46

   45 expr6: expr5 . TCLT expr6
   46      | expr5 . TCGT expr6
   47      | expr5 . TCLE expr6
   48      | expr5 . TCGE expr6
   49      | expr5 .

    TCLT  shift, and go to state 80
    TCLE  shift, and go to state 81
    TCGT  shift, and go to state 82
    TCGE  shift, and go to state 83

    $default  reduce using rule 49 (expr6)


state 47

   50 expr5: expr4 . TBLEFT expr5
   51      | expr4 . TBRIGHT expr5
   52      | expr4 .
   53 expr4: expr4 . TPLUS expr3
   54      | expr4 . TMINUS expr3

    TPLUS    shift, and go to state 84
    TMINUS   shift, and go to state 85
    TBLEFT   shift, and go to state 86
    TBRIGHT  shift, and go to state 87

    $default  reduce using rule 52 (expr5)


state 48

   55 expr4: expr3 .

    $default  reduce using rule 55 (expr4)


state 49

   56 expr3: expr2 . TMUL expr3
   57      | expr2 . TDIV expr3
   58      | expr2 . TMOD expr3
   59      | expr2 .

    TMUL  shift, and go to state 88
    TDIV  shift, and go to state 89
    TMOD  shift, and go to state 90

    $default  reduce using rule 59 (expr3)


state 50

   28 expr: expr1 . TEQUAL expr
   68 expr2: expr1 .

    TEQUAL  shift, and go to state 91

    $default  reduce using rule 68 (expr2)


state 51

   70 expr1: expr0 .

    $default  reduce using rule 70 (expr1)


state 52

   64 expr2: identifier . TSADD
   65      | identifier . TSMINUS
   71 expr0: identifier .

    TSADD    shift, and go to state 92
    TSMINUS  shift, and go to state 93

    $default  reduce using rule 71 (expr0)


state 53

    8 matched_stmt: IF TLPAREN . expr TRPAREN matched_stmt ELSE matched_stmt
   16 open_stmt: IF TLPAREN . expr TRPAREN stmt
   17          | IF TLPAREN . expr TRPAREN matched_stmt ELSE open_stmt

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29

    expr        go to state 94
    expr12      go to state 39
    expr11      go to state 40
    expr10      go to state 41
    expr9       go to state 42
    expr8       go to state 43
    expr7       go to state 44
    expr6       go to state 45
    expr5       go to state 46
    expr4       go to state 47
    expr3       go to state 48
    expr2       go to state 49
    expr1       go to state 50
    expr0       go to state 51
    identifier  go to state 52


state 54

   13 matched_stmt: WHILE TLPAREN . expr_and_decl TRPAREN matched_stmt

    INT          shift, and go to state 10
    CHAR         shift, and go to state 11
    FLOAT        shift, and go to state 12
    DOUBLE       shift, and go to state 13
    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29

    expr_and_decl  go to state 95
    type           go to state 37
    expr           go to state 38
    expr12         go to state 39
    expr11         go to state 40
    expr10         go to state 41
    expr9          go to state 42
    expr8          go to state 43
    expr7          go to state 44
    expr6          go to state 45
    expr5          go to state 46
    expr4          go to state 47
    expr3          go to state 48
    expr2          go to state 49
    expr1          go to state 50
    expr0          go to state 51
    identifier     go to state 52


state 55

   14 matched_stmt: FOR TLPAREN . optional_expr TSEMICOLON optional_expr TSEMICOLON optional_expr TRPAREN matched_stmt

    INT          shift, and go to state 10
    CHAR         shift, and go to state 11
    FLOAT        shift, and go to state 12
    DOUBLE       shift, and go to state 13
    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29

    $default  reduce using rule 31 (optional_expr)

    expr_and_decl  go to state 96
    type           go to state 37
    expr           go to state 38
    optional_expr  go to state 97
    expr12         go to state 39
    expr11         go to state 40
    expr10         go to state 41
    expr9          go to state 42
    expr8          go to state 43
    expr7          go to state 44
    expr6          go to state 45
    expr5          go to state 46
    expr4          go to state 47
    expr3          go to state 48
    expr2          go to state 49
    expr1          go to state 50
    expr0          go to state 51
    identifier     go to state 52


state 56

   69 expr1: TLPAREN expr . TRPAREN

    TRPAREN  shift, and go to state 98


state 57

   61 expr2: TPLUS TINTEGER .

    $default  reduce using rule 61 (expr2)


state 58

   60 expr2: TMINUS TINTEGER .

    $default  reduce using rule 60 (expr2)


state 59

   62 expr2: TSADD identifier .

    $default  reduce using rule 62 (expr2)


state 60

   63 expr2: TSMINUS identifier .

    $default  reduce using rule 63 (expr2)


state 61

   11 matched_stmt: TREAD TLPAREN . identifier TRPAREN TSEMICOLON

    TIDENTIFIER  shift, and go to state 17

    identifier  go to state 99


state 62

   12 matched_stmt: TWRITE TLPAREN . expr TRPAREN TSEMICOLON

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29

    expr        go to state 100
    expr12      go to state 39
    expr11      go to state 40
    expr10      go to state 41
    expr9       go to state 42
    expr8       go to state 43
    expr7       go to state 44
    expr6       go to state 45
    expr5       go to state 46
    expr4       go to state 47
    expr3       go to state 48
    expr2       go to state 49
    expr1       go to state 50
    expr0       go to state 51
    identifier  go to state 52


state 63

   66 expr2: TNOT expr1 .

    $default  reduce using rule 66 (expr2)


state 64

   71 expr0: identifier .

    $default  reduce using rule 71 (expr0)


state 65

   67 expr2: TBNOT expr1 .

    $default  reduce using rule 67 (expr2)


state 66

   15 matched_stmt: TRETURN expr . TSEMICOLON

    TSEMICOLON  shift, and go to state 101


state 67

    2 comp_stmt: TLBRACE stmts TRBRACE .

    $default  reduce using rule 2 (comp_stmt)


state 68

    4 stmts: stmt stmts .

    $default  reduce using rule 4 (stmts)


state 69

    9 matched_stmt: expr_and_decl TSEMICOLON .

    $default  reduce using rule 9 (matched_stmt)


state 70

   19 expr_and_decl: type args_list .

    $default  reduce using rule 19 (expr_and_decl)


state 71

   24 args_list: arg .
   25          | arg . TCOMMA args_list

    TCOMMA  shift, and go to state 102

    $default  reduce using rule 24 (args_list)


state 72

   26 arg: identifier . TEQUAL expr
   27    | identifier .

    TEQUAL  shift, and go to state 103

    $default  reduce using rule 27 (arg)


state 73

   32 expr12: expr11 TOR . expr12

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29

    expr12      go to state 104
    expr11      go to state 40
    expr10      go to state 41
    expr9       go to state 42
    expr8       go to state 43
    expr7       go to state 44
    expr6       go to state 45
    expr5       go to state 46
    expr4       go to state 47
    expr3       go to state 48
    expr2       go to state 49
    expr1       go to state 105
    expr0       go to state 51
    identifier  go to state 52


state 74

   34 expr11: expr10 TAND . expr11

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29

    expr11      go to state 106
    expr10      go to state 41
    expr9       go to state 42
    expr8       go to state 43
    expr7       go to state 44
    expr6       go to state 45
    expr5       go to state 46
    expr4       go to state 47
    expr3       go to state 48
    expr2       go to state 49
    expr1       go to state 105
    expr0       go to state 51
    identifier  go to state 52


state 75

   36 expr10: expr9 TBOR . expr10

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29

    expr10      go to state 107
    expr9       go to state 42
    expr8       go to state 43
    expr7       go to state 44
    expr6       go to state 45
    expr5       go to state 46
    expr4       go to state 47
    expr3       go to state 48
    expr2       go to state 49
    expr1       go to state 105
    expr0       go to state 51
    identifier  go to state 52


state 76

   38 expr9: expr8 TBXOR . expr9

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29

    expr9       go to state 108
    expr8       go to state 43
    expr7       go to state 44
    expr6       go to state 45
    expr5       go to state 46
    expr4       go to state 47
    expr3       go to state 48
    expr2       go to state 49
    expr1       go to state 105
    expr0       go to state 51
    identifier  go to state 52


state 77

   40 expr8: expr7 TBAND . expr8

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29

    expr8       go to state 109
    expr7       go to state 44
    expr6       go to state 45
    expr5       go to state 46
    expr4       go to state 47
    expr3       go to state 48
    expr2       go to state 49
    expr1       go to state 105
    expr0       go to state 51
    identifier  go to state 52


state 78

   42 expr7: expr6 TCEQ . expr7

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29

    expr7       go to state 110
    expr6       go to state 45
    expr5       go to state 46
    expr4       go to state 47
    expr3       go to state 48
    expr2       go to state 49
    expr1       go to state 105
    expr0       go to state 51
    identifier  go to state 52


state 79

   43 expr7: expr6 TCNE . expr7

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29

    expr7       go to state 111
    expr6       go to state 45
    expr5       go to state 46
    expr4       go to state 47
    expr3       go to state 48
    expr2       go to state 49
    expr1       go to state 105
    expr0       go to state 51
    identifier  go to state 52


state 80

   45 expr6: expr5 TCLT . expr6

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29

    expr6       go to state 112
    expr5       go to state 46
    expr4       go to state 47
    expr3       go to state 48
    expr2       go to state 49
    expr1       go to state 105
    expr0       go to state 51
    identifier  go to state 52


state 81

   47 expr6: expr5 TCLE . expr6

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29

    expr6       go to state 113
    expr5       go to state 46
    expr4       go to state 47
    expr3       go to state 48
    expr2       go to state 49
    expr1       go to state 105
    expr0       go to state 51
    identifier  go to state 52


state 82

   46 expr6: expr5 TCGT . expr6

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29

    expr6       go to state 114
    expr5       go to state 46
    expr4       go to state 47
    expr3       go to state 48
    expr2       go to state 49
    expr1       go to state 105
    expr0       go to state 51
    identifier  go to state 52


state 83

   48 expr6: expr5 TCGE . expr6

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29

    expr6       go to state 115
    expr5       go to state 46
    expr4       go to state 47
    expr3       go to state 48
    expr2       go to state 49
    expr1       go to state 105
    expr0       go to state 51
    identifier  go to state 52


state 84

   53 expr4: expr4 TPLUS . expr3

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29

    expr3       go to state 116
    expr2       go to state 49
    expr1       go to state 105
    expr0       go to state 51
    identifier  go to state 52


state 85

   54 expr4: expr4 TMINUS . expr3

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TSADD        shift, and go to state 24
    TSMINUS      shift, and go to state 25
    TNOT         shift, and go to state 28
    TBNOT        shift, and go to state 29

    expr3       go to state 117
    expr2       go to state 49
    expr1       go to state 105
    expr0       go to state 51
    identifier  go to state 52


state 86

   50 expr5: expr4 TBLEFT . expr5
